<resources>
    <string name="app_name">TheScores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">Start Date :</string>
    <string name="team_image">team image</string>
    <string name="founded">Founded:</string>
    <string name="nickname">NickName:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="website">Website:</string>
    <string name="email_address">Email Address:</string>
    <string name="club_colors">Club Colors:</string>
    <string name="team_players">Team Players</string>
</resources>